groups of 5 cells are now more visible on the board. the clues for the cell under the mouse are highlighted to make things easier to see. Fixed (hopefully) bugs when viewing a game over screen where a winning player has deleted their user account

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,7 +28,7 @@ ul {
 
 #nonogram {
   border-collapse: collapse;
-  border-width: 1px;
+  border-width: 2px;
   border-style: solid;
 }
 
@@ -45,9 +45,12 @@ ul {
 }
 
 .cell {
-  border: 1px solid #666666;
   width: 20px;
   height: 20px;
+}
+
+.game-cell {
+  border: 1px solid #666666;
 }
 
 .blank {
@@ -61,6 +64,18 @@ ul {
 
 .crossed {
   background-color: #cccccc;
+}
+
+.highlight-clue {
+  color: #ff3300;
+}
+
+.left-border {
+  border-left: 2px solid #666666;
+}
+
+.top-border {
+  border-top: 2px solid #666666;
 }
 
 .pad-out {
